force-app/main/default/objects/Voucher_Stock__c/Voucher_Stock__c.object-meta.xml
<CustomObject>
    <label>מלאי</label>
    <nameField>
        <label>סוג מלאי</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>מלאי</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>