force-app/main/default/objects/Voucher_Stock__c/fields/Initial_amount_vouchers__c.field-meta.xml
<CustomField>
    <fullName>Initial_amount_vouchers__c</fullName>
    <label>כמות שוברים התחלתית</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>