force-app/main/default/objects/Voucher_Stock__c/fields/Population_type__c.field-meta.xml
<CustomField>
    <fullName>Population_type__c</fullName>
    <label>סוג אוכלוסיה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Voucher_Stock_Population</valueSetName>
    </valueSet>
</CustomField>