force-app/main/default/objects/Voucher_Stock__c/fields/Qty_vouchers_available__c.field-meta.xml
<CustomField>
    <fullName>Qty_vouchers_available__c</fullName>
    <formula>Initial_amount_vouchers__c  -  Qty_vouchers_requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>כמות שוברים זמינה</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>