force-app/main/default/objects/Voucher_Stock__c/fields/Qty_vouchers_requested__c.field-meta.xml
<CustomField>
    <fullName>Qty_vouchers_requested__c</fullName>
    <label>כמות שוברים שהוקצו</label>
    <summaryFilterItems>
        <field>Voucher__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Voucher__c.Voucher_Stock__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>