force-app/main/default/objects/Voucher_Stock__c/fields/Root_Type__c.field-meta.xml
<CustomField>
    <fullName>Root_Type__c</fullName>
    <label>סוג מסלול</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מסלול תמרוץ להעסקת ג&apos;וניורים מאוכלוסיות הגיוון</fullName>
                <default>true</default>
                <label>מסלול תמרוץ להעסקת ג&apos;וניורים מאוכלוסיות הגיוון</label>
            </value>
            <value>
                <fullName>מסלול תמרוץ חזרה לעבודה לעובדים עם מוגבלות ועובדים בני 40 פלוס</fullName>
            </value>
            <value>
                <fullName>מסלול ראשון</fullName>
                <isActive>false</isActive>
                <label>מסלול ראשון</label>
            </value>
            <value>
                <fullName>מסלול שני</fullName>
                <isActive>false</isActive>
                <label>מסלול שני</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>