force-app/main/default/objects/Voucher_Stock__c/fields/Website_Stock__c.field-meta.xml
<CustomField>
    <fullName>Website_Stock__c</fullName>
    <formula>IF(
        (Qty_vouchers_available__c &gt;= 1 &amp;&amp; Qty_vouchers_available__c &lt;=10),
        &quot;1-10&quot;,
        IF(
            (Qty_vouchers_available__c &gt; 10 &amp;&amp; Qty_vouchers_available__c &lt;=20),
            &quot;11-20&quot;,
            IF(
                Qty_vouchers_available__c &gt; 20,
                &quot;מעל 20 שוברים&quot;,
                &quot;הקצאה נוכחית מוצתה&quot;
            )
        )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מלאי זמין</label>
    <type>Text</type>
</CustomField>