force-app/main/default/objects/Voucher_Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Population_type__c</columns>
    <columns>Root_Type__c</columns>
    <columns>Initial_amount_vouchers__c</columns>
    <columns>Qty_vouchers_available__c</columns>
    <columns>Qty_vouchers_requested__c</columns>
    <columns>Website_Stock__c</columns>
    <filterScope>Everything</filterScope>
    <label>כל המלאי</label>
</ListView>